# chronos

./: .env.example  .gitignore  Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: integration.rs
crates/connectors/: Cargo.toml
crates/connectors/src/: claude.rs  gdrive.rs  github.rs  gmail.rs  lib.rs  slack.rs  stella.rs
crates/core/: Cargo.toml
crates/core/src/: attribution.rs  entities.rs  lib.rs  overlap.rs  rules.rs  schema.rs  store.rs  windows.rs
crates/report/: Cargo.toml
crates/report/src/: lib.rs  renderer.rs  summary.rs
migrations/: 001_billing.sql
