[workspace]
members = [
    "crates/core",
    "crates/connectors",
    "crates/report",
    "crates/cli",
]
resolver = "3"

[workspace.package]
version = "0.260506.0"
edition = "2024"
license = "MIT"
authors = ["Alex Gutierrez"]

[workspace.dependencies]
# Internal
chronos-core = { path = "crates/core" }
chronos-connectors = { path = "crates/connectors" }
chronos-report = { path = "crates/report" }

# Shared (rusty-data from bloomnet)
rusty-data = { path = "../rusty-bloomnet/crates/rusty-data" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP (for API connectors)
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Hashing
sha2 = "0.10"
