[package]
name = "chronos"
version.workspace = true
edition.workspace = true

[[bin]]
name = "chronos"
path = "src/main.rs"

[dependencies]
chronos-core = { workspace = true }
chronos-connectors = { workspace = true }
chronos-report = { workspace = true }
rusty-data = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
