[package]
name = "chronos-core"
version.workspace = true
edition.workspace = true

[dependencies]
rusty-data = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
